[package]
name = "exa_api_client"
version = "0.1.0"
edition = "2018"
description = "A Rust client for interacting with the Exa/Metaphor systems API"
license = "MIT"  


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
exa_api_client = "0.1.0"

